separated out shortest path dir and shortest path undir
